Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-116426

crash in QQuickItemPrivate::derefWindow

XMLWordPrintable

    • 5d79b207c (dev), fe0b983fc (6.7), e6811c930 (6.6), 461d31d2d (tqtc/lts-6.5)

      unfortunately i don't have a reproducer, but our crash reporter uploaded a minidump that may indicate a missing nullptr check inside qt:

      Application Specific Information:
      Fatal Error: SIGSEGV / SEGV_ACCERR / 0xa9006d00
      
      Thread 311 Crashed:
      0   zero (deleted)                  0xa9006d00          <unknown>
      1   ni-roda                         0x6e874e            [inlined] QQuickItemPrivate::derefWindow (qquickitem.cpp:3049)
      2   ni-roda                         0x6e874e            QQuickItemPrivate::derefWindow (qquickitem.cpp:3049)
      3   ni-roda                         0x6ea996            QQuickItem::setParentItem (qquickitem.cpp:2700)
      4   ni-roda                         0x82472e            QQuickItemView::destroyingItem (qquickitemview.cpp:2442)
      5   ni-roda                         0x1141bb6           doActivate<T> (qobject.cpp:4004)
      6   ni-roda                         0xd03922            QQmlInstanceModel::destroyingItem (moc_qqmlobjectmodel_p.cpp:369)
      7   ni-roda                         0xd41030            QQmlDelegateModelPrivate::destroyCacheItem (qqmldelegatemodel_p_p.h:273)
      8   ni-roda                         0xd410a8            QQmlDelegateModel::release (qqmldelegatemodel.cpp:605)
      9   ni-roda                         0x829698            QQuickItemViewPrivate::releaseItem (qquickitemview.cpp:2474)
      10  ni-roda                         0x8423dc            QQuickListViewPrivate::releaseItem (qquicklistview.cpp:704)
      11  ni-roda                         0x82226c            QQuickItemViewPrivate::clear (qquickitemview_p_p.h:224)
      12  ni-roda                         0x82c20e            QQuickItemViewPrivate::regenerate (qquickitemview.cpp:1832)
      13  ni-roda                         0x82db2c            QQuickItemView::modelUpdated (qquickitemview.cpp:1247)
      14  ni-roda                         0x1141bb6           doActivate<T> (qobject.cpp:4004)
      15  ni-roda                         0xd037f8            QQmlInstanceModel::modelUpdated (moc_qqmlobjectmodel_p.cpp:348)
      16  ni-roda                         0xd36fec            QQmlDelegateModelPrivate::emitModelUpdated
      17  ni-roda                         0xd39568            QQmlDelegateModelGroupPrivate::emitModelUpdated (qqmldelegatemodel.cpp:2785)
      18  ni-roda                         0xd3d9ac            QQmlDelegateModelPrivate::emitChanges (qqmldelegatemodel.cpp:1834)
      19  ni-roda                         0xd490da            QQmlDelegateModel::_q_modelReset (qqmldelegatemodel.cpp:1889)
      20  ni-roda                         0xd499ec            QQmlDelegateModel::qt_metacall (moc_qqmldelegatemodel_p.cpp:612)
      21  ni-roda                         0x1141932           doActivate<T> (qobject.cpp:4018)
      22  ni-roda                         0x122b922           QAbstractItemModel::endResetModel (moc_qabstractitemmodel.cpp:1408)
      

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            timblechmann tim blechmann
            Votes:
            0 Vote for this issue
            Watchers:
            8 Start watching this issue

              Created:
              Updated:
              Resolved: