Workaround for crash on derefWindow on application shutdown

Ideally there shouldn't be nullptrs in the list. This fix will however
prevent crashes, until we find out why.

Fixes: QTBUG-116426
Pick-to: 6.7 6.6 6.6.2 6.5
Change-Id: I2c85ad73832ab4d8b9992b4d8e661758fae85ac7
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>